Renamed project to Toga

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include README.rst
 include AUTHORS
 include LICENSE
 include requirements*.txt
-recursive-include tailor *.py
+recursive-include toga *.py
 recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
