--- a/docs/Makefile
+++ b/docs/Makefile
@@ -77,17 +77,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/tailor.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/toga.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/tailor.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/toga.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/tailor"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/tailor"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/toga"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/toga"
 	@echo "# devhelp"
 
 epub:
