Moved content in preparation for repository merge.

--- a/src/core/MANIFEST.in
+++ b/src/core/MANIFEST.in
@@ -1,7 +1,7 @@
 include LICENSE
-include README.rst
 include tox.ini
-recursive-include toga *.py
+include src/core/README.rst
+recursive-include src/core *.py
 recursive-include docs *.bat
 recursive-include docs *.py
 recursive-include docs *.rst
