--- a/src/gtk/MANIFEST.in
+++ b/src/gtk/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include README.rst
 include tox.ini
-recursive-include toga_gtk *.py
+include src/gtk/README.rst
+recursive-include src/gtk *.py
 recursive-include tests *.py
