--- a/src/iOS/MANIFEST.in
+++ b/src/iOS/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
-include README.rst
 include tox.ini
-recursive-include toga_iOS *.py
+include src/iOS/README.rst
+recursive-include src/iOS *.py
 recursive-include tests *.py
