--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py26, py27, py33, py34
+envlist = py34, py35
 
 [testenv]
 commands = {envpython} setup.py test
 deps =
-
-[testenv:py26]
-deps =
-    unittest2
