--- a/src/android/MANIFEST.in
+++ b/src/android/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/android/README.rst
-recursive-include src/android *.py
+include README.rst
+recursive-include toga_android *.py
 recursive-include tests *.py
