--- a/src/cocoa/MANIFEST.in
+++ b/src/cocoa/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/cocoa/README.rst
-recursive-include src/cocoa *.py
+include README.rst
+recursive-include toga_cocoa *.py
 recursive-include tests *.py
