--- a/src/django/MANIFEST.in
+++ b/src/django/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/django/README.rst
-recursive-include src/django *.py
+include README.rst
+recursive-include toga_django *.py
 recursive-include tests *.py
