--- a/src/gtk/MANIFEST.in
+++ b/src/gtk/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/gtk/README.rst
-recursive-include src/gtk *.py
+include README.rst
+recursive-include toga_gtk *.py
 recursive-include tests *.py
