--- a/src/iOS/MANIFEST.in
+++ b/src/iOS/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/iOS/README.rst
-recursive-include src/iOS *.py
+include README.rst
+recursive-include toga_iOS *.py
 recursive-include tests *.py
