--- a/src/web/MANIFEST.in
+++ b/src/web/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/web/README.rst
-recursive-include src/web *.py
+include README.rst
+recursive-include toga_web *.py
 recursive-include tests *.py
