--- a/src/win32/MANIFEST.in
+++ b/src/win32/MANIFEST.in
@@ -1,5 +1,5 @@
 include LICENSE
 include tox.ini
-include src/win32/README.rst
-recursive-include src/win32 *.py
+include README.rst
+recursive-include toga_win32 *.py
 recursive-include tests *.py
