Start moving toga-django to use webpack for distribution.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ _build
 distribute-*
 local
 .tox
+node_modules
+README.md
+src/django/toga.js
+src/django/toga.min.js
+src/django/toga.js.map
+src/django/toga.min.js.map
+
