--- a/src/django/package.json
+++ b/src/django/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pybee/toga",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A cross platform Python-native widget toolkit.",
   "author": "Russell Keith-Magee",
   "main": "toga.js",
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "pandoc --from=rst --to=markdown_github README.rst -o README.md",
-    "build": "node_modules/.bin/webpack --progress",
+    "build": "node_modules/.bin/webpack",
     "watch": "node_modules/.bin/webpack --progress --watch",
     "start": "node_modules/.bin/webpack-dev-server --inline --hot"
   },
@@ -45,9 +45,9 @@
   },
   "dev": "webpack-dev-server",
   "dependencies": {
-    "@pybee/batavia": "^3.4.0-dev8",
     "font-awesome": "4.7.0",
     "bootstrap": "4.0.0-alpha.5",
+    "@pybee/batavia": "^3.4",
     "webpack": "1.13.3"
   }
 }
