--- a/src/django/package.json
+++ b/src/django/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pybee/toga",
-  "version": "0.0.5",
+  "version": "0.0.6-dev.1",
   "description": "A cross platform Python-native widget toolkit.",
   "author": "Russell Keith-Magee",
   "main": "toga.js",
@@ -47,7 +47,7 @@
   "dependencies": {
     "font-awesome": "4.7.0",
     "bootstrap": "4.0.0-alpha.5",
-    "@pybee/batavia": "^3.4",
+    "@pybee/batavia": "~3.4.0-dev.12",
     "webpack": "1.13.3"
   }
 }
