--- a/src/django/package.json
+++ b/src/django/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@pybee/toga",
-  "version": "0.0.6-dev.1",
+  "version": "0.0.6-dev.2",
   "description": "A cross platform Python-native widget toolkit.",
   "author": "Russell Keith-Magee",
-  "main": "toga.js",
+  "main": "toga/toga.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pybee/toga.git"
