--- a/src/django/package.json
+++ b/src/django/package.json
@@ -11,9 +11,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "pandoc --from=rst --to=markdown_github README.rst -o README.md",
-    "build": "node_modules/.bin/webpack",
+    "build": "node_modules/.bin/webpack --progress",
     "watch": "node_modules/.bin/webpack --progress --watch",
-    "start": "node_modules/.bin/webpack-dev-server --inline --hot"
+    "serve": "node_modules/.bin/webpack-dev-server --inline --hot --port 3000"
   },
   "keywords": [
     "python",
