--- a/src/django/package.json
+++ b/src/django/package.json
@@ -29,25 +29,31 @@
     "babel-core": "6.18.2",
     "babel-loader": "6.2.8",
     "babel-preset-latest": "6.16.0",
-    "css-loader": "^0.26.1",
+    "css-loader": "0.26.1",
     "eslint": "3.9.1",
     "eslint-config-airbnb": "13.0.0",
     "eslint-loader": "1.6.1",
     "eslint-plugin-import": "2.1.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.6.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "0.9.0",
     "json-loader": "0.5.4",
-    "node-sass": "^4.1.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "node-sass": "4.1.1",
+    "resolve-url-loader": "^1.6.1",
+    "sass-loader": "4.1.1",
+    "style-loader": "0.13.1",
     "uglifyjs": "2.4.10",
-    "webpack-dev-server": "1.16.2"
+    "url-loader": "0.5.7",
+    "webpack-dev-server": "1.16.2",
+    "write-file-webpack-plugin": "^3.4.2"
   },
   "dev": "webpack-dev-server",
   "dependencies": {
-    "font-awesome": "4.7.0",
-    "bootstrap": "4.0.0-alpha.5",
     "@pybee/batavia": "~3.4.0-dev.12",
+    "bootstrap": "4.0.0-alpha.5",
+    "font-awesome": "4.7.0",
+    "jquery": "^3.1.1",
     "webpack": "1.13.3"
   }
 }
