Moved resources into toga/ and fixed packaging.

--- a/src/core/MANIFEST.in
+++ b/src/core/MANIFEST.in
@@ -3,3 +3,5 @@ include tox.ini
 include README.rst
 recursive-include toga *.py
 recursive-include tests *.py
+recursive-include toga/resources *.png
+recursive-include toga/resources *.icns
