--- a/src/django/MANIFEST.in
+++ b/src/django/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include tox.ini
 include README.rst
 recursive-include toga_django *.py
+recursive-include toga_django/django/templates *.html
 recursive-include tests *.py
