Added data_user property to Table
* now multiple Views can be updated on data change.
* updated test app to have two table views with the same data source.
* updated .gitignore to exclude example app 'builds'

Signed-off-by: Jonas Schell <jonasschell@ocupe.org>

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ pyvenv.cfg
 bin/
 lib/
 
+# Exclude briefcase packages from the examples dir.
+examples/*/macOS/
+examples/*/iOS/
+examples/*/linux/
+examples/*/android/
+examples/*/django/
+examples/*/windows/
+
