--- a/beekeeper.yml
+++ b/beekeeper.yml
@@ -39,7 +39,7 @@ pull_request:
             - winforms:
                 name: Winforms implementation compliance check
                 environment:
-                    EXTRA_REQUIRES: git+https://github.com/pybee/legless-lizard.git
+                    EXTRA_REQUIRES: https://github.com/pybee/legless-lizard/archive/master.zip
                     TEST_DIR: src/winforms
                     SRC_DEPENDANTS: src/core src/dummy
             - cocoa:
