--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ src/django/toga.js.map
 src/django/toga.min.js.map
 src/gtk/gi
 src/gtk/pygtkcompat
+src/gtk/cairo
 .DS_Store
 pip-selfcheck.json
 pyvenv.cfg
