--- a/docs/requirements_rtd.txt
+++ b/docs/requirements_rtd.txt
@@ -1,2 +1,3 @@
 -r requirements.txt
-git+https://github.com/pybee/toga-gtk
+git+https://github.com/pybee/toga#egg=toga-core&subdirectory=src/core
+git+https://github.com/pybee/toga#egg=toga-gtk&subdirectory=src/gtk
