--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,17 @@
 [flake8]
 # https://flake8.readthedocs.org/en/latest/
-exclude=local/*,docs/*,src/django/node_modules/*
+exclude=\
+    local/*,\
+    docs/*,\
+    */node_modules/*,\
+    */.eggs/*,\
+    src/*/build,\
+    examples/.template,\
+    examples/*/android,\
+    examples/*/linux,\
+    examples/*/macOS,\
+    examples/*/iOS,\
+    examples/*/win32
 max-complexity = 10
 max-line-length = 119
 ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901
