Reworked the GI import process.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ exclude=\
     */node_modules/*,\
     */.eggs/*,\
     src/*/build,\
+    src/gtk/toga_gtk/libs/gtk.py
     examples/.template,\
     examples/*/android,\
     examples/*/linux,\
