Cleaned up flake8 problems.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ exclude=\
     src/*/build,\
     src/gtk/toga_gtk/libs/gtk.py
     src/gtk/toga_gtk/libs/__init__.py
+    src/winforms/toga_winforms/libs/__init__.py
     examples/.template,\
     examples/*/android,\
     examples/*/linux,\
