--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
   iOS:
     name: iOS backend tests
     needs: python-versions
-    runs-on: iOS-latest
+    runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python 3.7
