--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,6 +143,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
+        apt-get install -y python3-gi python3-gi-cairo gir1.2-gtk-3.0 python3-dev libgirepository1.0-dev libcairo2-dev pkg-config
         pip install --upgrade pip setuptools pytest-tldr
         pip install -e src/core
         pip install -e src/dummy
