--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
         task: ['pycodestyle', 'eslint']
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools beefore
@@ -30,10 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools pytest-tldr
@@ -51,7 +51,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.5, 3.6]
+        python-version: [3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -74,10 +74,10 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools pytest-tldr
@@ -95,10 +95,10 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools pytest-tldr
@@ -116,10 +116,10 @@ jobs:
     runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools pytest-tldr
@@ -137,10 +137,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         sudo apt-get install -y python3-gi python3-gi-cairo gir1.2-gtk-3.0 python3-dev libgirepository1.0-dev libcairo2-dev pkg-config
@@ -159,10 +159,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools pytest-tldr
@@ -180,10 +180,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python 3.7
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.5
     - name: Install dependencies
       run: |
         pip install --upgrade pip setuptools pytest-tldr
