--- a/examples/imageview/pyproject.toml
+++ b/examples/imageview/pyproject.toml
@@ -13,7 +13,7 @@ author_email = "tiberius@beeware.org"
 [tool.briefcase.app.imageview]
 formal_name = "ImageView Demo"
 description = "A testing app"
-sources = ['src/imageview']
+sources = ['imageview']
 requires = []
 
 
