--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools beefore
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install beefore
     - name: Run Beefore checks
       env:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -36,9 +38,11 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
     - name: Test
       run: |
         cd src/core
@@ -60,9 +64,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
     - name: Test
       run: |
         cd src/core
@@ -80,10 +86,12 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
-        pip install -e src/winforms
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
+        python -m pip install -e src/winforms
     - name: Test
       run: |
         cd src/winforms
@@ -101,10 +109,12 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
-        pip install -e src/cocoa
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
+        python -m pip install -e src/cocoa
     - name: Test
       run: |
         cd src/cocoa
@@ -122,10 +132,12 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
-        pip install -e src/iOS
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
+        python -m pip install -e src/iOS
     - name: Test
       run: |
         cd src/iOS
@@ -144,10 +156,12 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install -y python3-gi python3-gi-cairo gir1.2-gtk-3.0 python3-dev libgirepository1.0-dev libcairo2-dev pkg-config
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
-        pip install -e src/gtk
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
+        python -m pip install -e src/gtk
     - name: Test
       run: |
         cd src/gtk
@@ -165,10 +179,12 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
-        pip install -e src/android
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
+        python -m pip install -e src/android
     - name: Test
       run: |
         cd src/android
@@ -186,10 +202,12 @@ jobs:
         python-version: 3.5
     - name: Install dependencies
       run: |
-        pip install --upgrade pip setuptools pytest-tldr
-        pip install -e src/core
-        pip install -e src/dummy
-        pip install -e src/django
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install pytest-tldr
+        python -m pip install -e src/core
+        python -m pip install -e src/dummy
+        python -m pip install -e src/django
     - name: Test
       run: |
         cd src/django
