Initial refactor of web backend.

--- a/src/flask/setup.cfg
+++ b/src/flask/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = toga-django
+name = toga-flask
 project_urls =
     Funding = https://beeware.org/contributing/membership/
     Tracker = https://github.com/freakboy3742/toga/issues
@@ -24,18 +24,18 @@ classifiers =
     Topic :: Software Development :: Widget Sets
 license = New BSD
 license_file = LICENSE
-description = A Django backend for the Toga widget toolkit.
+description = A Flask backend for the Toga widget toolkit.
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
 keywords =
-    django
+    flask
     toga
 
 [options]
 zip_safe = False
 python_requires = >= 3.5
 py_modules =
-    toga_django
+    toga_flask
 
 [flake8]
 # https://flake8.readthedocs.org/en/latest/
