--- a/src/django/MANIFEST.in
+++ b/src/django/MANIFEST.in
@@ -1,6 +1,6 @@
 include LICENSE
-include tox.ini
 include README.rst
+recursive-include tests *.py
+recursive-include toga *.js
 recursive-include toga_django *.py
 recursive-include toga_django/django/templates *.html
-recursive-include tests *.py
