--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,33 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        task: ['pycodestyle', 'eslint']
+        task:
+        # - flake8
+        # - towncrier-check
+        - docs
+        - package
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.5
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.5
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools
+        python -m pip install beefore
+    - name: Run pre-test checks
+      run: |
+        tox -e ${{ matrix.task }}
+
+  beefore-legacy:
+    name: Pre-test checks
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        task: ['pycodestyle']
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python 3.5
@@ -32,7 +58,9 @@ jobs:
 
   smoke:
     name: Smoke test
-    needs: beefore
+    needs:
+    - beefore
+    - beefore-legacy
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
