Make sure tox is installed for pre-test checks.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install --upgrade setuptools
-        python -m pip install beefore
+        python -m pip install tox
     - name: Run pre-test checks
       run: |
         tox -e ${{ matrix.task }}
