Correct wildcard handling of package finder.

--- a/nursery/watchOS/setup.cfg
+++ b/nursery/watchOS/setup.cfg
@@ -42,7 +42,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_watchOS
+include = toga_watchOS.*
 
 [flake8]
 exclude=\
