--- a/src/cocoa/setup.cfg
+++ b/src/cocoa/setup.cfg
@@ -44,7 +44,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_cocoa
+include = toga_cocoa.*
 
 [flake8]
 exclude=\
