--- a/nursery/flask/setup.cfg
+++ b/nursery/flask/setup.cfg
@@ -43,7 +43,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_flask
+include = toga_flask.*
 
 [flake8]
 exclude=\
