--- a/nursery/pyramid/setup.cfg
+++ b/nursery/pyramid/setup.cfg
@@ -43,7 +43,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_pyramid
+include = toga_pyramid.*
 
 [flake8]
 exclude=\
