--- a/nursery/tvOS/setup.cfg
+++ b/nursery/tvOS/setup.cfg
@@ -43,7 +43,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_tvOS
+include = toga_tvOS.*
 
 [flake8]
 exclude=\
