--- a/nursery/web/setup.cfg
+++ b/nursery/web/setup.cfg
@@ -42,7 +42,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_web
+include = toga_web.*
 
 [flake8]
 exclude=\
