--- a/src/android/setup.cfg
+++ b/src/android/setup.cfg
@@ -43,7 +43,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_android
+include = toga_android.*
 
 [flake8]
 exclude=\
