--- a/src/dummy/setup.cfg
+++ b/src/dummy/setup.cfg
@@ -42,7 +42,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_dummy
+include = toga_dummy.*
 
 [flake8]
 exclude=\
