--- a/src/iOS/setup.cfg
+++ b/src/iOS/setup.cfg
@@ -43,7 +43,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_iOS
+include = toga_iOS.*
 
 [flake8]
 exclude=\
