--- a/src/core/setup.cfg
+++ b/src/core/setup.cfg
@@ -55,7 +55,7 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.package_data]
-toga.resource =
+toga.resources =
     *.icns
     *.ico
     *.png
