Correct packaging error.

--- a/nursery/qt/setup.cfg
+++ b/nursery/qt/setup.cfg
@@ -43,7 +43,9 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_qt.*
+include =
+    toga_qt
+    toga_qt.*
 
 [flake8]
 exclude=\
