--- a/src/django/setup.cfg
+++ b/src/django/setup.cfg
@@ -43,7 +43,9 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_django.*
+include =
+    toga_django
+    toga_django.*
 
 [flake8]
 exclude=\
