--- a/src/winforms/setup.cfg
+++ b/src/winforms/setup.cfg
@@ -44,7 +44,9 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_winforms.*
+include =
+    toga_winforms
+    toga_winforms.*
 
 [flake8]
 exclude=\
