--- a/nursery/curses/setup.cfg
+++ b/nursery/curses/setup.cfg
@@ -44,7 +44,9 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_curses.*
+include =
+    toga_curses
+    toga_curses.*
 
 [flake8]
 exclude=\
