--- a/nursery/uwp/setup.cfg
+++ b/nursery/uwp/setup.cfg
@@ -44,7 +44,9 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_uwp.*
+include =
+    toga_uwp
+    toga_uwp.*
 
 [flake8]
 exclude=\
