--- a/src/gtk/setup.cfg
+++ b/src/gtk/setup.cfg
@@ -44,7 +44,9 @@ python_requires = >= 3.5
 zip_safe = False
 
 [options.packages.find]
-include = toga_gtk.*
+include =
+    toga_gtk
+    toga_gtk.*
 
 [flake8]
 exclude=\
