Fixed packaging of toga-demo.

--- a/demo/setup.cfg
+++ b/demo/setup.cfg
@@ -58,7 +58,9 @@ console_scripts =
     toga-demo = toga_demo.__main__:run
 
 [options.packages.find]
-include = toga_demo.*
+include =
+    toga_demo
+    toga_demo.*
 
 [options.package_data]
 toga_demo.resources =
