Clean up winforms backend.

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,5 +77,8 @@ skip =
     docs/conf.py,\
     examples/.template,\
     local,\
-    nursery
+    nursery,\
+    src/winforms/toga_winforms/libs/winforms.py
+
 multi_line_output = 3
+include_trailing_comma = true
