Clean up gtk backend.

--- a/setup.cfg
+++ b/setup.cfg
@@ -78,6 +78,7 @@ skip =
     examples/.template,\
     local,\
     nursery,\
+    src/winforms/toga_gtk/libs/gtk.py,\
     src/winforms/toga_winforms/libs/winforms.py
 
 multi_line_output = 3
