Last pass of cleanups.

--- a/setup.cfg
+++ b/setup.cfg
@@ -66,20 +66,21 @@ exclude=\
     examples/*/linux,\
     examples/*/macOS,\
     examples/*/iOS,\
-    examples/*/windows
-max-complexity = 10
+    examples/*/windows,\
+    venv
+max-complexity = 25
 max-line-length = 119
-ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901
 
 [isort]
 skip =
+    .tox,\
     attic,\
     docs/conf.py,\
     examples/.template,\
     local,\
     nursery,\
-    src/winforms/toga_gtk/libs/gtk.py,\
-    src/winforms/toga_winforms/libs/winforms.py
-
+    src/gtk/toga_gtk/libs/gtk.py,\
+    src/winforms/toga_winforms/libs/winforms.py,\
+    venv
 multi_line_output = 3
 include_trailing_comma = true
