--- a/src/web/MANIFEST.in
+++ b/src/web/MANIFEST.in
@@ -2,4 +2,4 @@ include CONTRIBUTING.md
 include LICENSE
 include README.rst
 recursive-include tests *.py
-recursive-include toga_cocoa *.py
+recursive-include toga_web *.py
