--- a/examples/webview/pyproject.toml
+++ b/examples/webview/pyproject.toml
@@ -10,36 +10,36 @@ license = "BSD license"
 author = 'Tiberius Yak'
 author_email = "tiberius@beeware.org"
 
-[tool.briefcase.app.webview_source]
+[tool.briefcase.app.webview]
 formal_name = "WebView Demo"
 description = "A demo app using all WebView features"
-sources = ['webview_source']
+sources = ['webview']
 requires = []
 
-[tool.briefcase.app.webview_source.macOS]
+[tool.briefcase.app.webview.macOS]
 requires = [
 '../../src/core',
 '../../src/cocoa',
 ]
 
-[tool.briefcase.app.webview_source.linux]
+[tool.briefcase.app.webview.linux]
 requires = [
     'toga-gtk',
 ]
 
-[tool.briefcase.app.webview_source.windows]
+[tool.briefcase.app.webview.windows]
 requires = [
     'toga-winforms',
 ]
 
 # Mobile deployments
-[tool.briefcase.app.webview_source.iOS]
+[tool.briefcase.app.webview.iOS]
 requires = [
 '../../src/core',
 '../../src/ios',
 ]
 
-[tool.briefcase.app.webview_source.android]
+[tool.briefcase.app.webview.android]
 requires = [
     'toga-android',
 ]
