Cleaned up some flake8 problems.

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,7 +67,7 @@ exclude=\
     examples/*/macOS,\
     examples/*/iOS,\
     examples/*/windows,\
-    venv
+    venv*
 max-complexity = 25
 max-line-length = 119
 
