--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-# envlist = flake8,towncrier-check,docs,package,py{35,36,37,38}
-envlist = flake8,py{35,36,37,38},towncrier-check,docs,package
+envlist = flake8,towncrier-check,docs,package,py{35,36,37,38}
 skip_missing_interpreters = true
 
 [testenv]
