--- a/examples/scrollcontainer/pyproject.toml
+++ b/examples/scrollcontainer/pyproject.toml
@@ -14,7 +14,9 @@ author_email = "tiberius@beeware.org"
 formal_name = "ScrollContainer Demo"
 description = "A testing app"
 sources = ['scrollcontainer']
-requires = []
+requires = [
+	'c:/Projects/Python/Toga/src/core'
+]
 
 
 [tool.briefcase.app.scrollcontainer.macOS]
@@ -29,7 +31,8 @@ requires = [
 
 [tool.briefcase.app.scrollcontainer.windows]
 requires = [
-    'toga-winforms',
+    #'toga-winforms',
+	'c:/Projects/Python/Toga/src/winforms'
 ]
 
 # Mobile deployments
@@ -40,5 +43,6 @@ requires = [
 
 [tool.briefcase.app.scrollcontainer.android]
 requires = [
-    'toga-android',
+    #'toga-android',
+	'c:/Projects/Python/Toga/src/android'
 ]
