--- a/examples/dialogs/pyproject.toml
+++ b/examples/dialogs/pyproject.toml
@@ -14,7 +14,9 @@ author_email = "tiberius@beeware.org"
 formal_name = "Dialog Demo"
 description = "A testing app"
 sources = ['dialogs']
-requires = []
+requires = [
+	'c:/Projects/Python/Toga/src/core'
+]
 
 
 [tool.briefcase.app.dialogs.macOS]
@@ -40,5 +42,6 @@ requires = [
 
 [tool.briefcase.app.dialogs.android]
 requires = [
-    'toga-android',
+    #'toga-android',
+	'c:/Projects/Python/Toga/src/android'
 ]
